--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,39 @@
     box-sizing: border-box;
 }
 
+.quick_menu{
+    position: fixed;
+    top: 40px;
+    right: 20px;
+    z-index: 2;
+    margin-right: 20px
+}
+
+.quick_menu li{
+    list-style: none;
+    display: inline-block;
+}
+
+.scroll{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 50%;
+    font-weight: 800;
+    background-color: white;
+    color: black;
+    margin: 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+}
+
 .box{
     height: 100vh;
     width: 100vw;
     position: relative;
+    top: 0;
 }
 
 .box h3{
